@@ -1,3 +1,7 @@
+2009-07-15  Robert T. Short  <octave@phaselockedsystems.com>
+
+	* DLD-FUNCTIONS/filter.cc: New tests.
+
 2009-07-09  John W. Eaton  <jwe@octave.org>
 
 	* data.cc (Fones, Fzeros, Ftrue, Ffalse): Update docstrings.
